Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22177

Proxy authentication fails if http proxy disconnects after issuing 407

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.8.x, 5.0.0
    • 4.7.0, 4.7.3, 4.7.4
    • Network: Proxies
    • None
    • Win7 x64, WinXP x86
    • 0ad18e18d1223b173d4a0d374b70ec08c3b22b11 (5.0), d8213cbff66784a3e1132e278d608500f88975f2 (4.8)

    Description

      To reproduce:

      • set up a proxy, for example fiddler: (http://www.fiddler2.com/fiddler2/))
      • enable authentication (Rules/Require Proxy Authentication)
      • launch $(QTDIR)\demos\release\browser.exe
      • set proxy Edit/Preferences/Enable proxy (localhost:8888)
      • go to an HTTP site (for example http://xkcd.com)
      • observe how proxy authentication dialog comes up
      • go to HTTPS site (for example https://gmail.com)

      Expected: proxy password dialog shows up (or page loads if correct password was given before)
      Actual: page is never loaded, password is never asked. Proxy registers one CONNECT request.

      On a more technical note:
      Both QHttp and QNetworkAccessManager can't handle authenticated proxy when using SSL. proxyAuthenticationRequired signal is emitted, but finished signal on QNetworkReply (or httpRequestFinished on QHttp) is emitted as well. Looks like a bug in secure socket.

      Attachments

        1. qget.cpp
          4 kB
        2. qget.pro
          0.3 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            shkearns Shane Kearns
            unfleshedone Eugene Zolenko
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes